--- a/Camaras.html
+++ b/Camaras.html
@@ -33,7 +33,7 @@
           <a href="ConceptosBasicos.html">Conceptos Basicos</a>
         </li>
         <li>
-          <a href="#">Estilos de fotografia</a>
+          <a href="#">Fotografos de referencia</a>
         </li>
         <li>
           <a href="#">Fotografos de referencia</a>
