--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <!-- Icons Font -->
+  <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
   <!-- CUSTOM CSS -->
   <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -33,7 +36,7 @@
           <a href="ConceptosBasicos.html">Conceptos Basicos</a>
         </li>
         <li>
-          <a href="#">Estilos de fotografia</a>
+          <a href="EstilosFotografia.html">Estilos de fotografia</a>
         </li>
         <li>
           <a href="#">Fotografos de referencia</a>
@@ -142,6 +145,11 @@
     </section>
   </div>
 
+  <!-- up botton -->
+  <div id="botonarriba">
+    <i class="fas fa-chevron-up"></i>
+  </div>
+
   <!-- Footer Links -->
   <div class="footer-links">
     <div class="footer-container">
@@ -170,83 +178,9 @@
           <a href="https://fototrending.com/tipos-de-fotografia/">Foto Trending</a>
         </li>
       </ul>
-      <ul>
-        <li>
-          <a href="#">
-            <h3>Title Two</h3>
-          </a>
-        </li>
-        <li>
-          <a href="#">Blockchain</a>
-        </li>
-        <li>
-          <a href="#">Machine Learning</a>
-        </li>
-        <li>
-          <a href="#">Artificial Intelligence</a>
-        </li>
-        <li>
-          <a href="#">Quantum Computing</a>
-        </li>
-        <li>
-          <a href="#">Startup</a>
-        </li>
-        <li>
-          <a href="#">Cryptocurrencies</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="#">
-            <h3>Title Three</h3>
-          </a>
-        </li>
-        <li>
-          <a href="#">Blockchain</a>
-        </li>
-        <li>
-          <a href="#">Machine Learning</a>
-        </li>
-        <li>
-          <a href="#">Artificial Intelligence</a>
-        </li>
-        <li>
-          <a href="#">Quantum Computing</a>
-        </li>
-        <li>
-          <a href="#">Startup</a>
-        </li>
-        <li>
-          <a href="#">Cryptocurrencies</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="#">
-            <h3>Title Four</h3>
-          </a>
-        </li>
-        <li>
-          <a href="#">Blockchain</a>
-        </li>
-        <li>
-          <a href="#">Machine Learning</a>
-        </li>
-        <li>
-          <a href="#">Artificial Intelligence</a>
-        </li>
-        <li>
-          <a href="#">Quantum Computing</a>
-        </li>
-        <li>
-          <a href="#">Startup</a>
-        </li>
-        <li>
-          <a href="#">Cryptocurrencies</a>
-        </li>
-      </ul>
     </div>
   </div>
+
 
   <!-- Footer -->
   <footer class="footer">
