--- a/FotografiaBasica-14d8afe79321dc5e7afb4bdf2e81abe523fa68c2/FotografiaBasica-14d8afe79321dc5e7afb4bdf2e81abe523fa68c2/FotografosReferencia.html
+++ b/FotografiaBasica-14d8afe79321dc5e7afb4bdf2e81abe523fa68c2/FotografiaBasica-14d8afe79321dc5e7afb4bdf2e81abe523fa68c2/FotografosReferencia.html
@@ -33,7 +33,7 @@
           <a href="ConceptosBasicos.html">Conceptos Basicos</a>
         </li>
         <li>
-          <a href="#">Estilos de fotografia</a>
+          <a href="#">Fotografos de referencia</a>
         </li>
         <li>
           <a href="#">Fotografos de referencia</a>
