--- a/ConceptosBasicos.html
+++ b/ConceptosBasicos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conceptos Basicos</title>
+  <title>CamaraAdictos</title>
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
@@ -33,22 +33,22 @@
           <a href="ConceptosBasicos.html">Conceptos Basicos</a>
         </li>
         <li>
-          <a href="#">Estilos de fotografia</a>
+          <a href="EstilosFotografia.html">Estilos de fotografia</a>
         </li>
         <li>
-          <a href="#">Fotografos de referencia</a>
+          <a href="FotografosReferencia.html">Fotografos de referencia</a>
         </li>
         <li>
-          <a href="#">Aplicaciones</a>
+          <a href="Aplicaciones.html">Aplicaciones</a>
         </li>
         <li>
-          <a href="#">Camaras</a>
+          <a href="Camaras.html">Camaras</a>
         </li>
         <li>
-          <a href="#">Canales</a>
+          <a href="Canales.html">Canales</a>
         </li>
         <li>
-          <a href="#"></a>
+          <a href="Galerias.html">Galerias</a>
         </li>
       </ul>
 
