--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
         <li>
           <a href="Canales.html">Canales</a>
         </li>
-        <li>
-          <a href="Galerias.html">Galerias</a>
-        </li>
       </ul>
 
       <!-- Right Nav -->
@@ -71,7 +68,7 @@
       <h2>Aplicaciones con las que puedes practicar!</h2>
       <p>Descrubre las distintas aplicaciones con las cuales puedes mejorar tu habilidad con la fotografia,
          ademas de descubrir nuevas y mejores formas de adaptarte a nuevos estilos.</p>
-      <a href="#" class="btn">
+      <a href="Aplicaciones.html" class="btn">
         Conocer <i class="fas fa-chevron-right"></i>
       </a>
     </header>
@@ -90,33 +87,33 @@
         <h3>Fotografos de referencia</h3>
         <p>Aqui podras ver a los fotografos que concideramos referentes en el ambito de la fotografia! Haz Click Aqui!
         </p>
-        <a href="#">Leer Mas <i class="fas fa-angle-double-right"></i></a>
+        <a href="FotografosReferencia.html">Leer Mas <i class="fas fa-angle-double-right"></i></a>
       </div>
       <div>
         <img src="img/news3.jpg" alt="" />
-        <h3>Galerias</h3>
+        <h3>Estilos de Fotografia</h3>
         <p>Galerias fotograficas online en las cuales podras tomar gran inspiracion!
         </p>
-        <a href="#">Leer Mas <i class="fas fa-angle-double-right"></i></a>
+        <a href="EstilosFotografia.html">Leer Mas <i class="fas fa-angle-double-right"></i></a>
       </div>
       <div>
         <img src="img/news4.jpg" alt="" />
         <h3>Canales</h3>
         <p>Canales de youtube que concideramos de gran ayuda para mejorar tus habilidades!
         </p>
-        <a href="#">Leer Mas <i class="fas fa-angle-double-right"></i></a>
+        <a href="Canales.html">Leer Mas <i class="fas fa-angle-double-right"></i></a>
       </div>
     </div>
 
-    <!-- Card Banner 1-->
+    <!-- Card Banner 1
     <section class="cards-banner-one">
       <div class="content">
         <h2>Estilos de Fotografia</h2>
-        <!-- lorem 20 -->
+        <!-- lorem 20
         <p>Hay muchos estilos dentro del mundo de la fotografía, pero seguro que tienes un tipo de fotografía preferido. Te contamos todo acerca de los distintos tipos de fotografías y sus fotógrafos más representativos.</p>
         <a href="#" class="btn">Learn More<i class="fas fa-chevron-right"></i></a>
       </div>
-    </section>
+    </section>-->
 
     <!-- third card -->
     <section class="cards-banner-two">
