--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <h2>Camaras</h2>
         <!-- lorem 30 -->
         <p>A la hora de elegir una cámara fotográfica es importante tener claro qué usos le queremos dar y qué tipos de cámaras fotográficas existen para saber cuál se adapta mejor a nuestras necesidades.</p>
-        <a href="#" class="btn">Learn More <i class="fas fa-chevron-right"></i></a>
+        <a href="#" class="btn">Leer Mas<i class="fas fa-chevron-right"></i></a>
       </div>
     </section>
 
